apply plugin: "java"
apply plugin: "org.springframework.boot"
apply plugin: "io.spring.dependency-management"

group 'com.apps'
version '1.0'

sourceCompatibility = 17

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

dependencies {
    implementation "org.apache.commons:commons-lang3:${commonsLang3Version}"
    implementation "com.google.guava:guava:${guavaVersion}"
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.session:spring-session-data-redis'
    implementation 'org.springframework.security:spring-security-core' //needed for Auth deserialization must be on classpath. 
    implementation "org.springframework.security.oauth:spring-security-oauth2:${springOauthVersion}" //needed for Auth deserialization must be on classpath. 
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-websocket"
    implementation "org.springframework.kafka:spring-kafka:${springKafka}"
    implementation "com.corundumstudio.socketio:netty-socketio:${nettySocketio}"
    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "org.testng:testng:${testngVersion}"
}

sourceSets {
    main {
        java {
            srcDirs += ['src/resources']
        }
    }
}


task testng(type: Test) {
    useTestNG()
}

check.dependsOn testng
